# vehicle_tracker_api

./: .gitignore  CLAUDE.md  DJANGO_CODING_GUIDE.md  Dockerfile  docker-compose.yml  env.example  mentor_summary_draft.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/analytics/: apps.py
apps/cars/: apps.py  models.py
apps/cars/migrations/: 0001_initial.py  0002_alter_car_number_car.py
apps/customers/: apps.py  models.py
apps/customers/migrations/: 0001_initial.py
apps/logistics/: apps.py
apps/products/: apps.py  models.py
apps/products/migrations/: 0001_initial.py
apps/waybills/: apps.py  models.py
apps/waybills/migrations/: 0001_initial.py
config/: settings.py  urls.py
task_description/: AGENTS_GLOBAL.md  AI_AGENT_CONTEXT.md  CHANGES.md  CLAUDE.md  README.md  TASK.md  TASK_template.md
task_description/task_description/: ruff_check.md
task_description/transport/: 01_PROJECT_OVERVIEW.md  02_DATABASE_SCHEMA.md  03_TYPESCRIPT_TYPES.md  04_PAGES_AND_ROUTING.md  05_COMPONENTS_HOOKS_UTILS.md  06_IMPLEMENTATION_PLAN.md  07_MOCK_DATA.md  08_PROJECT_STRUCTURE.md  DJANGO_CODING_GUIDE.md
task_description/warehouse/: 01_PROJECT_OVERVIEW.md  02_DATABASE_SCHEMA.md  03_TYPESCRIPT_TYPES.md  04_PAGES_AND_ROUTING.md  05_COMPONENTS_HOOKS_UTILS.md  06_IMPLEMENTATION_PLAN.md  07_MOCK_DATA.md  08_PROJECT_STRUCTURE.md
